"""PBFT consensus implementation for Co-Forget Protocol."""

import asyncio
import grpc
from typing import Dict, List, Set, Tuple, Optional
from dataclasses import dataclass
from concurrent import futures
import uuid

# Generated protobuf code will be imported here
# from . import pbft_pb2
# from . import pbft_pb2_grpc


@dataclass
class PBFTMessage:
    """PBFT message structure."""

    view: int
    sequence: int
    message_type: str  # 'pre-prepare', 'prepare', 'commit'
    memory_id: str
    sender_id: str
    signature: str  # In real implementation, use proper crypto


class PBFTCoordinator:
    """Implements PBFT consensus for memory management."""

    def __init__(self, num_agents: int, max_faulty: Optional[int] = None):
        self.view = 0
        self.sequence = 0
        self.max_faulty = max_faulty or (num_agents - 1) // 3
        self.required_votes = 2 * self.max_faulty + 1
        self.messages: Dict[str, List[PBFTMessage]] = {}
        self.prepared: Dict[str, Set[str]] = {}
        self.committed: Dict[str, Set[str]] = {}

    async def pre_prepare(self, memory_id: str, agent_id: str) -> bool:
        """Pre-prepare phase of PBFT."""
        msg = PBFTMessage(
            view=self.view,
            sequence=self.sequence,
            message_type="pre-prepare",
            memory_id=memory_id,
            sender_id=agent_id,
            signature=str(uuid.uuid4()),  # Replace with real crypto
        )

        if memory_id not in self.messages:
            self.messages[memory_id] = []
        self.messages[memory_id].append(msg)

        # Check if we have enough pre-prepare messages
        return (
            len(
                [m for m in self.messages[memory_id] if m.message_type == "pre-prepare"]
            )
            >= self.required_votes
        )

    async def prepare(self, memory_id: str, agent_id: str) -> bool:
        """Prepare phase of PBFT."""
        msg = PBFTMessage(
            view=self.view,
            sequence=self.sequence,
            message_type="prepare",
            memory_id=memory_id,
            sender_id=agent_id,
            signature=str(uuid.uuid4()),
        )

        self.messages[memory_id].append(msg)

        # Track prepared messages
        if memory_id not in self.prepared:
            self.prepared[memory_id] = set()
        self.prepared[memory_id].add(agent_id)

        return len(self.prepared[memory_id]) >= self.required_votes

    async def commit(self, memory_id: str, agent_id: str) -> bool:
        """Commit phase of PBFT."""
        msg = PBFTMessage(
            view=self.view,
            sequence=self.sequence,
            message_type="commit",
            memory_id=memory_id,
            sender_id=agent_id,
            signature=str(uuid.uuid4()),
        )

        self.messages[memory_id].append(msg)

        # Track committed messages
        if memory_id not in self.committed:
            self.committed[memory_id] = set()
        self.committed[memory_id].add(agent_id)

        return len(self.committed[memory_id]) >= self.required_votes

    async def run_consensus(self, memory_ids: Set[str], agents: List[str]) -> Set[str]:
        """Run PBFT consensus on a set of memory IDs."""
        to_delete = set()

        for memory_id in memory_ids:
            # Pre-prepare phase
            pre_prepare_votes = await asyncio.gather(
                *[self.pre_prepare(memory_id, agent_id) for agent_id in agents]
            )

            if sum(pre_prepare_votes) < self.required_votes:
                continue

            # Prepare phase
            prepare_votes = await asyncio.gather(
                *[self.prepare(memory_id, agent_id) for agent_id in agents]
            )

            if sum(prepare_votes) < self.required_votes:
                continue

            # Commit phase
            commit_votes = await asyncio.gather(
                *[self.commit(memory_id, agent_id) for agent_id in agents]
            )

            if sum(commit_votes) >= self.required_votes:
                to_delete.add(memory_id)

        return to_delete


class PBFTService:
    """gRPC service for PBFT consensus."""

    def __init__(self, coordinator: PBFTCoordinator, agent_id: str):
        self.coordinator = coordinator
        self.agent_id = agent_id

    async def ProposeForgetting(self, request, context):
        """Handle memory forgetting proposals."""
        memory_ids = set(request.memory_ids)
        result = await self.coordinator.run_consensus(
            memory_ids,
            [self.agent_id],  # In real implementation, get all agent IDs
        )
        return pbft_pb2.ProposeResponse(proposal_ids=list(result))

    async def VoteOnMemory(self, request, context):
        """Handle voting on memory removal."""
        memory_id = request.memory_id
        # Implement voting logic here
        vote = "forget" if await self._should_forget(memory_id) else "keep"
        return pbft_pb2.VoteResponse(vote=vote)

    async def Commit(self, request, context):
        """Handle memory deletion commits."""
        memory_ids = request.memory_ids
        # Implement commit logic here
        success = await self._delete_memories(memory_ids)
        return pbft_pb2.CommitResponse(success=success)

    async def _should_forget(self, memory_id: str) -> bool:
        """Determine if a memory should be forgotten."""
        # Implement memory scoring logic here
        return False

    async def _delete_memories(self, memory_ids: List[str]) -> bool:
        """Delete committed memories."""
        # Implement memory deletion logic here
        return True
